force-app/main/default/objects/Hotel__c/Hotel__c.object-meta.xml
<CustomObject>
    <description>Hotel object is the custom object used to store the information about each hotel including different custom fields about that particular hotel.</description>
    <label>Hotel</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hotels</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>