force-app/main/default/objects/Hotel__c/fields/Activities__c.field-meta.xml
<CustomField>
    <fullName>Activities__c</fullName>
    <description>Small description of the things that guest can do.</description>
    <label>Activities</label>
    <type>TextArea</type>
</CustomField>