force-app/main/default/objects/Hotel__c/fields/Activity_One_Img__c.field-meta.xml
<CustomField>
    <fullName>Activity_One_Img__c</fullName>
    <label>Activity One Img</label>
    <type>Url</type>
</CustomField>