force-app/main/default/objects/Hotel__c/fields/Activity_Three_Img__c.field-meta.xml
<CustomField>
    <fullName>Activity_Three_Img__c</fullName>
    <label>Activity Three Img</label>
    <type>Url</type>
</CustomField>