force-app/main/default/objects/Hotel__c/fields/Activity_Two_Img__c.field-meta.xml
<CustomField>
    <fullName>Activity_Two_Img__c</fullName>
    <label>Activity Two Img</label>
    <type>Url</type>
</CustomField>