force-app/main/default/objects/Hotel__c/fields/Activity_Two_Name__c.field-meta.xml
<CustomField>
    <fullName>Activity_Two_Name__c</fullName>
    <label>Activity Two Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>