force-app/main/default/objects/Hotel__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Address is a custom field in the Hotel object that is used to store the address of the hotel.</description>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>