force-app/main/default/objects/Hotel__c/fields/Avg_Cleanliness_And_Hygiene__c.field-meta.xml
<CustomField>
    <fullName>Avg_Cleanliness_And_Hygiene__c</fullName>
    <description>This is the formula to calculate avg rating for Cleanliness and hygiene</description>
    <formula>IF( Total_Reviews__c &lt;&gt; 0, Total_Cleanliness_And_Hygiene__c  / Total_Reviews__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Cleanliness And Hygiene</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>