force-app/main/default/objects/Hotel__c/fields/Avg_Food_Quality__c.field-meta.xml
<CustomField>
    <fullName>Avg_Food_Quality__c</fullName>
    <description>This is the formula to calculate avg rating for Food quality</description>
    <formula>IF( Total_Reviews__c &lt;&gt; 0, Total_Food_Quality__c  / Total_Reviews__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Food Quality</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>