force-app/main/default/objects/Hotel__c/fields/Avg_Hospitality__c.field-meta.xml
<CustomField>
    <fullName>Avg_Hospitality__c</fullName>
    <description>This is the formula to calculate avg rating for Hospitality</description>
    <formula>IF( Total_Reviews__c &lt;&gt; 0, Total_Hospitality__c  / Total_Reviews__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Hospitality</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>