force-app/main/default/objects/Hotel__c/fields/Avg_Value_For_Money__c.field-meta.xml
<CustomField>
    <fullName>Avg_Value_For_Money__c</fullName>
    <description>This is the formula to calculate avg rating for value for money</description>
    <formula>IF( Total_Reviews__c &lt;&gt; 0, Total_Value_For_Money__c  / Total_Reviews__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Value For Money</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>