force-app/main/default/objects/Hotel__c/fields/Banner_Photo_Url__c.field-meta.xml
<CustomField>
    <fullName>Banner_Photo_Url__c</fullName>
    <description>Banner Photo Url is the custome field used to store the Url of the Banner Image.</description>
    <label>Banner Photo Url</label>
    <type>Url</type>
</CustomField>