force-app/main/default/objects/Hotel__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>This Field will show the city of the Hotel</description>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>