force-app/main/default/objects/Hotel__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>This field store the country in which hotel is located in.</description>
    <label>Country</label>
    <length>30</length>
    <type>Text</type>
</CustomField>