force-app/main/default/objects/Hotel__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email is the custom field that is used to store the Email of the Hotel.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>