force-app/main/default/objects/Hotel__c/fields/Featured__c.field-meta.xml
<CustomField>
    <fullName>Featured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Field is Accessible for Admin Only and This will help to sort the hotels on the basis of the Checkbox.</description>
    <label>Featured</label>
    <type>Checkbox</type>
</CustomField>