force-app/main/default/objects/Hotel__c/fields/Front_Img__c.field-meta.xml
<CustomField>
    <fullName>Front_Img__c</fullName>
    <label>Front Img</label>
    <type>Url</type>
</CustomField>