force-app/main/default/objects/Hotel__c/fields/Google_Map_Link__c.field-meta.xml
<CustomField>
    <fullName>Google_Map_Link__c</fullName>
    <description>Holds the link to the google map for the hotel</description>
    <label>Google Map Link</label>
    <type>Url</type>
</CustomField>