force-app/main/default/objects/Hotel__c/fields/Highlights__c.field-meta.xml
<CustomField>
    <fullName>Highlights__c</fullName>
    <description>Write the attraction of the hotels.</description>
    <label>Highlights</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>