force-app/main/default/objects/Hotel__c/fields/Hotel_City__c.field-meta.xml
<CustomField>
    <fullName>Hotel_City__c</fullName>
    <description>This field will store the city in which the hotel is located</description>
    <label>Hotel City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cities</valueSetName>
    </valueSet>
</CustomField>