force-app/main/default/objects/Hotel__c/fields/Not_Includes__c.field-meta.xml
<CustomField>
    <fullName>Not_Includes__c</fullName>
    <label>Not Includes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Facilities</valueSetName>
    </valueSet>
</CustomField>