force-app/main/default/objects/Hotel__c/fields/Number_Of_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Rooms__c</fullName>
    <description>Number Of Rooms is the custom field that is used to store the Total number of room of the Hotel.</description>
    <label>Number Of Rooms</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>