force-app/main/default/objects/Hotel__c/fields/Overall_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_Rating__c</fullName>
    <description>This field stores the overall Average rating of a particular hotel</description>
    <formula>IF( Total_Reviews__c &lt;&gt; 0,( Avg_Cleanliness_And_Hygiene__c + Avg_Food_Quality__c + Avg_Value_For_Money__c + Avg_Hospitality__c ) / 4 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Rating</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>