force-app/main/default/objects/Hotel__c/fields/Peripheral_Img__c.field-meta.xml
<CustomField>
    <fullName>Peripheral_Img__c</fullName>
    <label>Peripheral Img</label>
    <type>Url</type>
</CustomField>