force-app/main/default/objects/Hotel__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone is the custom field that is used to store the Phone of the Hotel.</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>