force-app/main/default/objects/Hotel__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>This Field Indicates the minimum price of the rooms. and the value of room will fill from the flow. Flow will execute when the record of the room is created.</description>
    <label>Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>