force-app/main/default/objects/Hotel__c/fields/Safety_Rules__c.field-meta.xml
<CustomField>
    <fullName>Safety_Rules__c</fullName>
    <label>Safety Rules</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Covid Test Kit</fullName>
            </value>
            <value>
                <fullName>Hand Sanitizers</fullName>
            </value>
            <value>
                <fullName>Social Distancing</fullName>
            </value>
            <value>
                <fullName>Limited Visitors</fullName>
            </value>
            <value>
                <fullName>Safety Kit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>