force-app/main/default/objects/Hotel__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>This Field Indicate the State of the Hotel</description>
    <label>State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>