force-app/main/default/objects/Hotel__c/fields/Total_Cleanliness_And_Hygiene__c.field-meta.xml
<CustomField>
    <fullName>Total_Cleanliness_And_Hygiene__c</fullName>
    <description>This field stores the data of the sum of rating of the hotel about Cleanliness and hygiene.</description>
    <label>Total Cleanliness And Hygiene</label>
    <summarizedField>Review__c.Cleanliness_And_Hygiene__c</summarizedField>
    <summaryForeignKey>Review__c.Hotel__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>