force-app/main/default/objects/Hotel__c/fields/Total_Food_Quality__c.field-meta.xml
<CustomField>
    <fullName>Total_Food_Quality__c</fullName>
    <description>This field stores the data of the sum of rating of the hotel about Food Quality.</description>
    <label>Total Food Quality</label>
    <summarizedField>Review__c.Food_Quality__c</summarizedField>
    <summaryForeignKey>Review__c.Hotel__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>