force-app/main/default/objects/Hotel__c/fields/Total_Hospitality__c.field-meta.xml
<CustomField>
    <fullName>Total_Hospitality__c</fullName>
    <description>This field stores the data of the sum of rating of the hotel about Hospitality.</description>
    <label>Total Hospitality</label>
    <summarizedField>Review__c.Hospitality__c</summarizedField>
    <summaryForeignKey>Review__c.Hotel__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>