force-app/main/default/objects/Hotel__c/fields/Total_Reviews__c.field-meta.xml
<CustomField>
    <fullName>Total_Reviews__c</fullName>
    <description>This Field Indicates total Number of reviews.</description>
    <label>Total Reviews</label>
    <summaryForeignKey>Review__c.Hotel__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>