force-app/main/default/objects/Hotel__c/fields/Total_Value_For_Money__c.field-meta.xml
<CustomField>
    <fullName>Total_Value_For_Money__c</fullName>
    <description>This field stores the data of the sum of rating of the hotel about Value for money.</description>
    <label>Total Value For Money</label>
    <summarizedField>Review__c.Value_For_Money__c</summarizedField>
    <summaryForeignKey>Review__c.Hotel__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>