force-app/main/default/objects/Hotel__c/fields/Unique_Hotel_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Hotel_Name__c</fullName>
    <description>Stores the name of the hotel in kebab case format to uniquely distinguish them</description>
    <label>Unique Hotel Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>