force-app/main/default/objects/Hotel__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>Website is the custom field that is used to store the Website Url of the Hotel.</description>
    <label>Website</label>
    <type>Url</type>
</CustomField>